# Qt-qrc-creator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  qrc_dialog.cpp  qrc_dialog.h  qrc_dialog.ui  res.qrc  ui_qrc_dialog.h  vcpkg.json
